tests/unit/pass/t26.hir
// 26 : assignment with underscore

module underscore{
    def foo() : i32, i32{
        return 0:i32, 1:i32;
    }

    def main() : i32{
        x:i32, _ = @foo();
        return x;
    }
}

