tests/unit/fail/t4.hir
// 4 : name table 1 - name not found
module default{

  def main(x:i32, y:f64) : i32 {
      k0 = 1:i32;
  }

}
